--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,5 +3,6 @@
     max-width: 880px;
     margin: 40px auto 50px;
     justify-content: space-between;
+    align-items: center;
     padding: 0;
 }
