--- a/pages/index.css
+++ b/pages/index.css
@@ -20,5 +20,6 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__opened/popup__opened.css);
+@import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
