--- a/blocks/popup/__form-submit/popup__form-submit.css
+++ b/blocks/popup/__form-submit/popup__form-submit.css
@@ -6,7 +6,9 @@
     line-height: 22px;
     background: #000000;
     border-radius: 2px;
-    transition: .3s;;
+    border: none;
+    color: #fff;
+    transition: .3s;
 }
 
 .popup__form-submit:hover {
