--- a/blocks/popup/__form-input-text/popup__form-input-text.css
+++ b/blocks/popup/__form-input-text/popup__form-input-text.css
@@ -1,8 +1,28 @@
 .popup__form-input-text {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 1);
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
+    padding-bottom: 13px;
+    margin-top: 30px;
+}
+
+.popup__form-input-text::placeholder {
     font-family: Inter;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 17px;
-border: 1px solid rgba(0, 0, 0, .2);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 1);
+}
+
+.popup__form-input-text:focus::placeholder {
+    color: transparent;
+}
+
+.popup__form-input-text:focus:focus {
+    outline: none;
 }
