--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -11,6 +11,15 @@
     transition: .3s;
 }
 
-.popup__close-button:hover{
+.popup__close-button:hover {
     opacity: .6;
+}
+
+@media screen and (min-width: 320px) and (max-width: 580px) {
+    .popup__close-button {
+        height: 20px;
+        width: 20px;
+        top: -30px;
+        right: 0px;
+    }
 }
