--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,3 +11,9 @@
     box-sizing: border-box;
 }
 
+@media screen and (min-width: 320px) and (max-width: 580px) {
+    .popup__container {
+        width: 282px;
+        padding: 25px 22px;
+    }
+}
