--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,4 +4,11 @@
   margin: 0 auto;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 17px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 900px) {
+  .elements {
+    justify-content: space-evenly;
+  }
 }
