--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,7 +2,8 @@
   display: flex;
   max-width: 880px;
   margin: 0 auto;
-  justify-content: space-between;
+  padding: 0 27px;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 17px;
 }
@@ -10,5 +11,6 @@
 @media screen and (min-width: 320px) and (max-width: 900px) {
   .elements {
     justify-content: space-evenly;
+    padding: 0 19px;
   }
 }
