--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,5 +2,13 @@
   display: flex;
   max-width: 880px;
   margin: 47px auto 36px;
+  padding: 0 27px;
     
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    
+    padding: 0 19px;
+  }
 }
