--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,6 +2,11 @@
     width: 142px;
 }
 
+.header__logo:hover {
+    opacity: .6;
+    cursor: pointer;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .header__logo {
         width: 104px;
