--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,25 +6,12 @@
     height: 74px;
     margin: 0 auto;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
-    
-}
-
-/*
-@media screen and (min-width: 1024px) {
-    .header {
-        margin: 0 48px 48px 48px;
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    .header {
-        margin: 0 24px 48px 24px;
-    }
+    padding: 0 27px;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .header {
-        margin: 0 16px 48px 16px;
+        padding: 0 19px;
     }
 }
-*/
