--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,3 +5,10 @@
     margin-right: 30px;
     border-radius: 50%;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__avatar {
+        margin: 0 auto;
+        margin-bottom: 22px;
+    }
+}
