--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,13 @@
 .profile__info {
     color: white;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    margin-right: 10px;      
     }
 
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        .profile__info {
+            grid-template-columns: 1fr auto 1fr;
+        }
+    }
