--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,4 +3,18 @@
     font-style: normal;
     font-weight: 500;
     line-height: 48px;
+    /*max-width: 294px;*/
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__name {
+        grid-column: 2;
+        font-family: Inter;
+        font-size: 27px;
+        line-height: 33px;
+    }
