--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,8 +1,17 @@
 .profile {
     display: flex;
+    flex-wrap: wrap;
     max-width: 880px;
     margin: 40px auto 50px;
-    justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 0 27px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile {
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 19px;
+
+    }
 }
