--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,5 +9,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .profile__info {
         grid-template-columns: 1fr auto 1fr;
+        margin-right: 0;
     }
 }
