--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,8 +1,16 @@
 .footer__text {
-    font-family: Inter;
+    margin: 0;
+    padding: 0;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
     color: rgba(84, 84, 84, 1);
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__text {
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
