--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -3,5 +3,5 @@
     align-items: center;
     justify-content: space-between;
     min-width: 246px;
-    padding: 0 15px 0 21px;
+    padding: 25px 15px 31px 21px;
 }
