--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -13,3 +13,10 @@
 .profile__edit-button:hover {
     opacity: .6;
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .profile__edit-button {
+        height: 18px;
+        width: 18px;
+    }
+}
