--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,11 +1,10 @@
 .elements {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  grid-gap: 17px;
   max-width: 880px;
   margin: 0 auto;
   padding: 0 27px;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  gap: 17px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 900px) {
