--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     width: 150px;
     height: 50px;
+    border-radius: 2px;
     transition: .3s;
     margin-left: auto;
     box-sizing: border-box;
