--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     max-width: 880px;
-    height: 74px;
+    min-height: 74px;
     margin: 0 auto;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
     padding: 0 27px;
