--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -7,7 +7,7 @@
   padding: 0 27px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 900px) {
+@media screen and (max-width: 900px) {
   .elements {
     padding: 0 19px;
   }
