--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -8,7 +8,7 @@
     color: rgba(84, 84, 84, 1);
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .footer__text {
         font-size: 14px;
         line-height: 17px;
