--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,7 +9,7 @@
     padding: 0 27px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .header {
         padding: 0 19px;
     }
