--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -15,7 +15,7 @@
     opacity: .6;
 }
 
-@media screen and (min-width: 320px) and (max-width: 580px) {
+@media screen and (max-width: 580px) {
     .popup__close-button {
         height: 20px;
         width: 20px;
