--- a/blocks/popup/__form-submit/popup__form-submit.css
+++ b/blocks/popup/__form-submit/popup__form-submit.css
@@ -17,7 +17,7 @@
     opacity: .8;
 }
 
-@media screen and (min-width: 320px) and (max-width: 580px) {
+@media screen and (max-width: 580px) {
     .popup__form-submit {
         min-height: 46px;
         font-size: 14px;
