--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -15,7 +15,7 @@
     opacity: .6;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .profile__add-button {
         margin: 0 auto;
         background: url(../../../images/svg/add-button-big-svg.svg) center no-repeat;
