--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -6,7 +6,7 @@
     border-radius: 50%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .profile__avatar {
         margin: 0 auto;
         margin-bottom: 22px;
