--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,7 +7,7 @@
     padding: 0 27px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .profile {
         flex-direction: column;
         justify-content: center;
