--- a/pages/index.css
+++ b/pages/index.css
@@ -15,6 +15,7 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/popup/popup.css);
