--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,7 +9,7 @@
   -webkit-font-smoothing: antialiased;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .page {
     padding: 28px 0 36px;
   }
