--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (min-width: 320px) and (max-width: 580px) {
     .popup__container {
         width: 282px;
         padding: 25px 22px;
