--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,7 +6,7 @@
     margin-right: 10px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .profile__info {
         grid-template-columns: 1fr auto 1fr;
         margin-right: 0;
