--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -11,7 +11,7 @@
     padding: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .profile__name {
         grid-column: 2;
         font-size: 27px;
