--- a/blocks/popup/__img/popup__img.css
+++ b/blocks/popup/__img/popup__img.css
@@ -1,6 +1,6 @@
 .popup__img {
-    max-width: 75vw;
-    max-height: 75vh;
+    width: 500px;
+    /*max-height: 75vh;*/
     object-fit: contain;
     margin: 0;
     padding: 0;
