--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,11 @@
 .page {
+  position: relative;
   max-width: 1280px;
   margin: auto;
   padding: 45px 0 60px;
   box-sizing: border-box;
   background: #000;
+  color: #fff;
   font-family: 'Inter', 'Arial', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
