--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -14,3 +14,36 @@
         padding: 25px 22px;
     }
 }
+/*
+.popup__container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    left: 50%;
+  top: 50%;
+  
+  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+    background: #FFFFFF;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    width: 430px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 34px 36px 37px;
+    box-sizing: border-box;
+}
+
+@media screen and (min-width: 320px) and (max-width: 580px) {
+    .popup__container {
+        width: 282px;
+        padding: 25px 22px;
+    }
+}
+*/
