--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,12 @@
 .page {
   max-width: 1280px;
+  width: 100%;
+  min-height: 100vh;
   margin: auto;
   padding: 45px 0 60px;
   box-sizing: border-box;
   background: #000;
+  color: #fff;
   font-family: 'Inter', 'Arial', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
