--- a/blocks/popup/__figure/popup__figure.css
+++ b/blocks/popup/__figure/popup__figure.css
@@ -1,3 +1,14 @@
 .popup__figure {
-    position: relative;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+}
+
+@media screen and (min-width: 320px) and (max-width: 580px) {
+    .popup__figure {
+        width: 282px;
+        padding: 25px 22px;
+    }
 }
