--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,24 +1,23 @@
 .popup {
-  display: none;
+  /*display: none;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, .5);
-  /*
-    display: flex;
-    visibility: hidden;
-    opacity: 0;
-    z-index: -1;
-    position: absolute;
-    top: 0;
+  */
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -999;
+  position: absolute;
+  top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-    width: 100%;
-    height: 100%;
-    transition: visibility 1s ease-out, z-index 2s ease-out, opacity 1s ease-out;
-    background-color: rgba(0, 0, 0, .5);
-   */
+  width: 100%;
+  height: 100%;
+  transition: visibility .8s ease-in-out, z-index 1s ease-in-out, opacity .8s ease-in-out;
+  background-color: rgba(0, 0, 0, .5);
 }
