--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     max-width: 880px;
+    width: 100%;
     margin: 40px auto 50px;
     align-items: center;
     padding: 0 27px;
